tests/locals.expected
99
Error near line 11: Variable 'a' not found in current scope.
None